fix bug - css for header a link text at small breakpoint incorrect spacing

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -195,7 +195,15 @@
 					top: calc(-2rem - 1px);
 					height: calc(2rem + 1px);
 				}
-			}
+      }
+      
+      nav {
+        ul {
+          li {
+            margin: auto;
+          }
+        }
+      }
 
 			.logo {
 				width: 4.75rem;
